# memory-allocators

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Docs/: benchmarks_charts.ods
docs/: benchmarks_charts.ods
includes/: Allocator.h  Benchmark.h  BenchmarkC.h  BenchmarkStack.h  CAllocator.h  DoublyLinkedList.h  DoublyLinkedListImpl.h  FreeListAllocator.h  IO.h  LinearAllocator.h  LinearAllocatorUnaligned.h  PoolAllocator.h  SinglyLinkedList.h  SinglyLinkedListImpl.h  StackAllocator.h  StackLinkedList.h  StackLinkedListImpl.h  Utils.h
src/: Allocator.cpp  Benchmark.cpp  BenchmarkC.cpp  BenchmarkStack.cpp  CAllocator.cpp  DoublyLinkedList.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  LinearAllocatorUnaligned.cpp  PoolAllocator.cpp  StackAllocator.cpp  main.cpp
